# lore-tui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  devbox.json
.github/workflows/: release.yml
.lore/adrs/: ADR-001-keep-lore-tui-as-separate-rust-binary.md  ADR-002-automatically-reload-artifacts-on-file-changes.md  ADR-003-use-lore-cli-for-preview-rendering.md  ADR-004-keep-validation-logic-in-lore-core.md  ADR-005-rust-implementation-lore-cli-and-lore-core.md  ADR-006-share-artifact-listing-logic-in-lore-core.md  ADR-007-share-discovery-logic-in-lore-core.md  ADR-008-treat-features-as-graph-nodes-not-containers.md
.lore/features/: FEATURE-001-ratatui-artifact-browser.md  FEATURE-009-new-artifact-type-prd.md  (+7 more)
crates/lore-tui/: Cargo.toml
crates/lore-tui/.lore/adrs/: ADR-002-automatically-reload-artifacts-on-file-changes.md  ADR-003-use-lore-cli-for-preview-rendering.md
crates/lore-tui/.lore/features/: FEATURE-001-ratatui-artifact-browser.md
crates/lore-tui/.lore/requirements/: REQ-003-show-related-artifacts-grouped-by-type.md  REQ-007-navigate-related-artifacts.md
crates/lore-tui/.lore/tests/: TEST-001-loads-artifacts-from-current-repository.md  TEST-006-related-pane-supports-navigation.md  TEST-007-preview-pane-uses-lore-show.md
crates/lore-tui/src/: app.rs  artifacts.rs  commands.rs  event.rs  main.rs  ui.rs
docs/: Gemfile  _config.yml  concepts.md  examples.md  faq.md  getting-started.md  index.md  philosophy.md  terminal.md  workflow.md
scripts/: release-major.sh  release-patch.sh
src/: app.rs  artifacts.rs  commands.rs  event.rs  main.rs  ui.rs
(+54 files in other folders)
