[package]
name = "lore-tui"
version.workspace = true
edition.workspace = true
description = "Terminal UI for browsing Lore project memory"
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = "0.29"
lore-core = { path = "../lore-core" }
notify = "6"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
